--- a/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
+++ b/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
@@ -1,5 +1,10 @@
+body{
+    font-family: 'Neucha', cursive;
+}
+
 .main-heading-class {
   text-align: center;
   margin-top: 4%;
   font-size: 50px;
+
 }
