--- a/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
+++ b/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
@@ -1,11 +1,20 @@
 body {
   font-family: "Neucha", cursive;
   box-sizing: border-box;
+  background-color: rgb(0, 113, 114);
 }
 
 .top-flex {
-  border: 1px solid blueviolet;
+  display: flex;
+  border: 1px solid sandybrown;
   margin: 10px 40px;
+  justify-content: space-between;
+  font-size: 25px;
+}
+
+.top-flex button {
+  font-size: large;
+  background-color: transparent;
 }
 
 .main-heading-class {
