--- a/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
+++ b/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 #input-box {
-  margin-top: -2em;
+  margin-top: -15%;
   text-align: center;
   font-size: 30px;
   width: 5em;
@@ -90,6 +90,9 @@ body {
   font-size: 30px;
   font-weight: 600;
   margin-top: -2em;
+  border: 1px solid;
+  width: 150%;
+  text-align: center;
 }
 
 .score {
