--- a/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
+++ b/JavaScript-Playground/JS-Projects/Guess-The-Number/style.css
@@ -71,7 +71,9 @@ body {
   font-weight: 800;
   border-radius: 7px;
   border: 1px solid black;
-  background-color: transparent;
+  background-color: black;
+  color: snow;
+  border: 2px solid rgba(255, 255, 255, 0.725);
 }
 
 #input-box {
@@ -81,8 +83,8 @@ body {
   width: 5em;
   height: 2em;
   border-radius: 7px;
-  border: 1px solid black;
   background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.725);
 }
 
 #RightChildDiv {
